[package]
name = "tonic_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arc-swap = "1.5.1"
dashmap = "5.4.0"
futures = "0.3"
chrono = "0.4"
lazy_static = "1.4.0"
prost = "0.11.0"
tonic = "0.8.0"
tokio = { version = "1.21.0", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.8.0"
